# kpfu-four-course

./: .gitignore
cv_and/: and_lab_1.py  and_lab_2.py  and_lab_2_rework.py  and_lab_3.py  and_lab_4.py  and_lab_5.py  and_lab_6.py  and_lab_7.py  and_lab_8.py
kode_info/: semestr.py
kode_info/exam/: extra_math.py  gui.py  reed_solomon.py
parallel_enikeev/: CMakeLists.txt  README.MD  clear_and_build.bat  run.bat  task1.cpp  vcpkg_rf.txt
parallel_enikeev_conveer/: README.MD  main.cpp
parallel_enikeev_teority/: readme.md
security_mybaraka/: 1984_en_war_thunder_original.txt  T4.txt  lab1_myb.py  lab2_myb.py  lab2_myb_extra.py  lab3_myb.py  ru_it_cloud_data_crypto_11.txt  ru_it_cloud_data_original.txt  ru_it_cloud_data_original_and_space_special_chars.txt  test+data.txt  x.txt  Гоооол тест.txt  гол_привет_зашифровано!!!!.txt  книгаака.txt  столука.txt
security_mybaraka/lab4/: .gitignore  QwertyTest1  README.md  TZ.md  client1.py  client2.py  crypto.py  database.py  db_viewer.py  logger.py  main.py  secret_file.txt
security_mybaraka/lab4/c_client/: RC4.py  RSA.py  file.txt  main.py
security_mybaraka/lab4/s_client/: RC4.py  RSA.py  database.py  main.py
security_mybaraka/lab4/utils/: __init__.py  crypto.py  database.py  helpers.py  logger.py
security_mybaraka/lab5/: Makefile  matrix.h  qs.cpp  rsa_break.cpp
security_mybaraka/lab5/broken/: main.cpp  rsa_break.cpp  rsa_break2.cpp  rsa_break3.cpp  test.cpp  test2.cpp  test3.cpp
